--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .input-basic {
+    @apply appearance-none rounded-3xl block border border-gray-300 px-5 py-4 placeholder-gray-500 text-gray-500 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 text-sm;
+  }
+  .btn {
+    @apply rounded-3xl text-white font-bold py-3 px-4;
+  }
+}
