--- a/src/index.css
+++ b/src/index.css
@@ -20,4 +20,14 @@
   .base-menu-item {
     @apply flex items-center px-4 cursor-pointer hover:bg-secondary-background hover:text-primary-light text-primary-text text-sm rounded-sm h-10;
   }
+  .base-table {
+    @apply bg-white rounded-lg w-full;
+    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.16);
+  }
+  .base-table tbody tr {
+    @apply border-b border-muted;
+  }
+  .base-table tbody tr:hover td {
+    @apply bg-secondary-background;
+  }
 }
