--- a/src/index.css
+++ b/src/index.css
@@ -30,4 +30,62 @@
   .base-table tbody tr:hover td {
     @apply bg-secondary-background;
   }
+  .base-input {
+    @apply rounded border border-control-border px-4 placeholder:text-primary-text-light
+     hover:border-primary focus:border-primary focus:outline-4 focus:outline-secondary-dark;
+  }
+  .base-input--success {
+    @apply border-success-dark hover:border-success-dark focus:border-success-dark focus:outline-4 focus:outline-control-success-outline;
+  }
+  .base-input--error {
+    @apply border-fail-dark hover:border-fail-dark focus:border-fail-dark focus:outline-4 focus:outline-control-fail-outline;
+  }
+  .base-input--disabled {
+    @apply border-control-disabled-border bg-control-disabled-background 
+    text-control-disabled-border placeholder:text-control-disabled-border;
+  }
+  .base-switcher {
+    @apply flex rounded-lg border border-control-border w-fit overflow-hidden cursor-pointer;
+  }
+  .base-switcher > div:not(:last-child) {
+    @apply border-r border-control-border;
+  }
+  .base-switcher > div {
+    @apply px-3 py-2;
+  }
+  .text-h1 {
+    font-size: 3.5rem;
+    line-height: 4.75rem;
+  }
+  .text-h2 {
+    font-size: 2.625rem;
+    line-height: 3.5625rem;
+  }
+  .text-h3 {
+    font-size: 1.625rem;
+    line-height: 2.1875rem;
+  }
+  .text-h4 {
+    font-size: 1.125rem;
+    line-height: 1.5625rem;
+    font-weight: 700;
+  }
+  .text-paragraph {
+    font-size: 0.875rem;
+    line-height: 1.1875rem;
+  }
+  .text-strong {
+    font-size: 0.875rem;
+    line-height: 1.1875rem;
+    font-weight: 600;
+  }
+  .text-blockquote {
+    font-size: 0.875rem;
+    line-height: 1.1875rem;
+    font-style: italic;
+  }
+}
+
+* {
+  color: #4f4f4f;
 }
