--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,7 @@
   --control-fail-outline: #ffb0b0;
   --success-dark: #00b89f;
   --control-success-outline: #7fe5d7;
+  --page-background: #F0F8FA;
 }
 
 @layer components {
@@ -35,6 +36,9 @@
   }
   .btn {
     @apply rounded-3xl text-white font-bold py-3 px-4;
+  }
+  .btn--disabled {
+    @apply pointer-events-none !bg-muted;
   }
   .base-card {
     @apply rounded-lg bg-white p-4;
@@ -79,6 +83,58 @@
   }
   .base-switcher > div {
     @apply px-3 py-2;
+  }
+  .base-sidebar {
+    @apply bg-white flex flex-col h-full items-start transition-all;
+    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.16);
+    transition-timing-function: cubic-bezier(0.25, 0.46, 0.45, 0.94);
+    transition-duration: 0.3s;
+  }
+  .base-sidebar__item {
+    @apply flex flex-wrap overflow-hidden w-full h-[52px] items-center cursor-pointer pr-4;
+  }
+  .base-sidebar__item--active,
+  .base-sidebar__item:hover {
+    @apply bg-secondary-dark;
+    box-shadow: inset 4px 0px 0px var(--primary);
+  }
+  .base-sidebar__item--active,
+  .base-sidebar__item:hover path {
+    fill: var(--primary);
+  }
+  .base-sidebar__item--active + .base-sidebar__item__subitems {
+    box-shadow: inset 4px 0px 0px var(--primary);
+  }
+  .base-sidebar__item__subitems {
+    @apply w-full overflow-hidden transition-all bg-white;
+    transition-timing-function: cubic-bezier(0.25, 0.46, 0.45, 0.94);
+    transition-duration: 0.3s;
+  }
+  .base-sidebar--collapsed .base-sidebar__item {
+    @apply px-0;
+  }
+  .base-sidebar--collapsed .base-sidebar__item__subitems {
+    @apply absolute top-0 left-[52px] w-auto shadow-none;
+  }
+  .base-sidebar--collapsed
+    .base-sidebar__item__subitems
+    .base-sidebar__item__wrapper {
+    @apply relative min-w-max;
+  }
+  .base-sidebar--collapsed .base-sidebar__item__subitems .base-sidebar__item {
+    @apply pl-0 pr-4 w-full flex-nowrap;
+  }
+  .base-sidebar--collapsed .base-sidebar__item__hint {
+    @apply absolute top-0 right-0 text-[10px] bg-secondary-background;
+  }
+  .base-sidebar__item__wrapper {
+    @apply relative w-full;
+  }
+  .base-sidebar__item__subitems .base-sidebar__item {
+    @apply pl-[38px];
+  }
+  .base-sidebar__item__hint {
+    @apply text-xs text-primary rounded bg-secondary-dark px-2 py-1;
   }
   .text-h1 {
     font-size: 3.5rem;
