--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -3,10 +3,15 @@ $header-height: 64px;
 
 .layout__container {
   display: grid;
+  overflow: hidden;
+  width: 100vw;
   height: 100vh;
   grid-template-areas: "sidebar header" "sidebar main";
-  grid-template-columns: $sidebar-width auto;
-  grid-template-rows: $header-height auto;
+  grid-template-columns: $sidebar-width minmax(
+      auto,
+      calc(100vw - $sidebar-width)
+    );
+  grid-template-rows: $header-height minmax(auto, calc(100vh - $header-height));
 }
 .sidebar {
   grid-area: sidebar;
@@ -18,4 +23,5 @@ $header-height: 64px;
 .main {
   grid-area: main;
   padding: 32px;
+  overflow: auto;
 }
