--- a/src/styles/atomic/animation.css
+++ b/src/styles/atomic/animation.css
@@ -1,22 +1,46 @@
-.base-menu-enter {
-  opacity: 0;
-}
-.base-menu-enter-active {
-  opacity: 1;
-  transition: cubic-bezier(0.25, 0.46, 0.45, 0.94) opacity 200ms;
-}
-.base-menu-exit {
-  opacity: 1;
-}
-.base-menu-exit-active {
-  opacity: 0;
-  transition: cubic-bezier(0.25, 0.46, 0.45, 0.94) opacity 200ms;
+.scale-out-ver-top {
+  -webkit-animation: scale-out-ver-top 0.3s
+    cubic-bezier(0.55, 0.085, 0.68, 0.53) both;
+  animation: scale-out-ver-top 0.3s cubic-bezier(0.55, 0.085, 0.68, 0.53) both;
 }
 
+.rotate-90-ccw {
+  -webkit-animation: rotate-90-ccw 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94)
+    both;
+  animation: rotate-90-ccw 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+}
+
+.rotate-90-cw {
+  -webkit-animation: rotate-90-cw 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+  animation: rotate-90-cw 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+}
+
+.rotate-360-cw {
+  -webkit-animation: rotate-360-cw 1.5s cubic-bezier(0.25, 0.46, 0.45, 0.94)
+    infinite both;
+  animation: rotate-360-cw 1.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) infinite
+    both;
+}
 .scale-in-ver-top {
   -webkit-animation: scale-in-ver-top 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94)
     both;
   animation: scale-in-ver-top 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+}
+.opacity-in {
+  -webkit-animation: opacity-in 0.5s ease-in-out both;
+  animation: opacity-in 0.5s ease-in-out both;
+}
+.opacity-out {
+  -webkit-animation: opacity-out 0.5s ease-in-out both;
+  animation: opacity-out 0.5s ease-in-out both;
+}
+.entrance-right {
+  -webkit-animation: entrance-right 0.5s ease-in-out both;
+  animation: entrance-right 0.5s ease-in-out both;
+}
+.exit-right {
+  -webkit-animation: exit-right 0.5s ease-in-out both;
+  animation: exit-right 0.5s ease-in-out both;
 }
 @-webkit-keyframes scale-in-ver-top {
   0% {
@@ -50,13 +74,6 @@
     opacity: 1;
   }
 }
-
-.scale-out-ver-top {
-  -webkit-animation: scale-out-ver-top 0.3s
-    cubic-bezier(0.55, 0.085, 0.68, 0.53) both;
-  animation: scale-out-ver-top 0.3s cubic-bezier(0.55, 0.085, 0.68, 0.53) both;
-}
-
 @-webkit-keyframes scale-out-ver-top {
   0% {
     -webkit-transform: scaleY(1);
@@ -89,12 +106,6 @@
     opacity: 1;
   }
 }
-
-.rotate-90-ccw {
-  -webkit-animation: rotate-90-ccw 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94)
-    both;
-  animation: rotate-90-ccw 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
-}
 @-webkit-keyframes rotate-90-ccw {
   0% {
     -webkit-transform: rotate(0);
@@ -114,11 +125,6 @@
     -webkit-transform: rotate(-90deg);
     transform: rotate(-90deg);
   }
-}
-
-.rotate-90-cw {
-  -webkit-animation: rotate-90-cw 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
-  animation: rotate-90-cw 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
 }
 @-webkit-keyframes rotate-90-cw {
   0% {
@@ -140,11 +146,6 @@
     transform: rotate(90deg);
   }
 }
-
-.rotate-360-cw {
-  -webkit-animation: rotate-360-cw 1.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) infinite both;
-  animation: rotate-360-cw 1.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) infinite both;
-}
 @-webkit-keyframes rotate-360-cw {
   0% {
     -webkit-transform: rotate(0);
@@ -163,5 +164,85 @@
   100% {
     -webkit-transform: rotate(360deg);
     transform: rotate(360deg);
+  }
+}
+@-webkit-keyframes opacity-in {
+  0% {
+    -webkit-opacity: 0;
+    opacity: 0;
+  }
+  100% {
+    -webkit-opacity: 1;
+    opacity: 1;
+  }
+}
+@keyframes opacity-in {
+  0% {
+    -webkit-opacity: 0;
+    opacity: 0;
+  }
+  100% {
+    -webkit-opacity: 1;
+    opacity: 1;
+  }
+}
+@-webkit-keyframes opacity-out {
+  0% {
+    -webkit-opacity: 1;
+    opacity: 1;
+  }
+  100% {
+    -webkit-opacity: 0;
+    opacity: 0;
+  }
+}
+@keyframes opacity-out {
+  0% {
+    -webkit-opacity: 1;
+    opacity: 1;
+  }
+  100% {
+    -webkit-opacity: 0;
+    opacity: 0;
+  }
+}
+@-webkit-keyframes entrance-right {
+  0% {
+    -webkit-transform: translate(100%);
+    transform: translate(100%);
+  }
+  100% {
+    -webkit-transform: translate(0);
+    transform: translate(0);
+  }
+}
+@keyframes entrance-right {
+  0% {
+    -webkit-transform: translate(100%);
+    transform: translate(100%);
+  }
+  100% {
+    -webkit-transform: translate(0);
+    transform: translate(0);
+  }
+}
+@-webkit-keyframes exit-right {
+  0% {
+    -webkit-transform: translate(0);
+    transform: translate(0);
+  }
+  100% {
+    -webkit-transform: translate(100%);
+    transform: translate(100%);
+  }
+}
+@keyframes exit-right {
+  0% {
+    -webkit-transform: translate(0);
+    transform: translate(0);
+  }
+  100% {
+    -webkit-transform: translate(100%);
+    transform: translate(100%);
   }
 }
